examples/test/testpolicy18930.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18930
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key42: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value44
          key38: value48
      podSelector:
        matchLabels:
          key8: value27
          key48: value31
